@@ -20,3 +20,6 @@
 
 - lib for writing modules
   - and doc
+
+- libcerebro versioning
+- libcerebro symbol map
