@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_heartbeat.c,v 1.13 2005-03-25 19:44:05 achu Exp $
+ *  $Id: cerebrod_heartbeat.c,v 1.14 2005-03-25 23:52:54 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -16,6 +16,7 @@
 #include <errno.h>
 
 #include "cerebro_defs.h"
+#include "cerebro_marshalling.h"
 #include "cerebrod_heartbeat_protocol.h"
 
 #include "cerebrod_heartbeat.h"
@@ -66,127 +67,47 @@ cerebrod_heartbeat_dump(struct cerebrod_heartbeat *hb)
 #endif /* NDEBUG */
 }
 
-/* 
- * _marshall_int32
- *
- * marshall contents of a 32 bit integer
- *
- * Returns length of data copied into buffer
- */
-static int
-_marshall_int32(int32_t val, char *buffer)
-{
-  int32_t temp;
-  assert(buffer);
-  temp = htonl(val);
-  memcpy(buffer, (void *)&temp, sizeof(temp));
-  return sizeof(temp);
-}
-
-/* 
- * _marshall_uint32
- *
- * marshall contents of an unsigned 32 bit integer
- *
- * Returns length of data copied into buffer
- */
-static int
-_marshall_uint32(u_int32_t val, char *buffer)
-{
-  u_int32_t temp;
-  assert(buffer);
-  temp = htonl(val);
-  memcpy(buffer, (void *)&temp, sizeof(temp));
-  return sizeof(temp);
-}
-
-/* 
- * _marshall_buffer
- *
- * marshall contents of a buffer
- *
- * Returns length of data copied into buffer
- */
-static int
-_marshall_buffer(char *buf, int buflen, char *buffer)
-{
-  assert(buf && buflen > 0 && buffer);
-  memcpy(buffer, buf, buflen);
-  return buflen;
-}
-
 int 
 cerebrod_heartbeat_marshall(struct cerebrod_heartbeat *hb, 
 			    char *buffer, int len) 
 {
-  int c = 0;
+  int ret, c = 0;
 
   assert(hb && buffer && len > 0);
   assert(len >= CEREBROD_HEARTBEAT_LEN);
 
   memset(buffer, '\0', len);
-  c += _marshall_int32(hb->version, buffer + c);
-  c += _marshall_buffer(hb->hostname, sizeof(hb->hostname), buffer + c);
-  c += _marshall_uint32(hb->starttime, buffer + c);
-  c += _marshall_uint32(hb->boottime, buffer + c);
+  if ((ret = cerebro_marshall_int32(hb->version, buffer + c, len - c)) < 0)
+    err_exit("cerebrod_heartbeat_marshall: cerebro_marshall_int32: %s",
+             strerror(errno));
+  c += ret;
+
+  if ((ret = cerebro_marshall_buffer(hb->hostname, 
+                                     sizeof(hb->hostname), 
+                                     buffer + c, 
+                                     len - c)) < 0)
+    err_exit("cerebrod_heartbeat_marshall: cerebro_marshall_buffer: %s",
+             strerror(errno));
+  c += ret;
+
+  if ((ret = cerebro_marshall_uint32(hb->starttime, buffer + c, len - c)) < 0)
+    err_exit("cerebrod_heartbeat_marshall: cerebro_marshall_uint32: %s",
+             strerror(errno));
+  c += ret;
+
+  if ((ret = cerebro_marshall_uint32(hb->boottime, buffer + c, len - c)) < 0)
+    err_exit("cerebrod_heartbeat_marshall: cerebro_marshall_uint32: %s",
+             strerror(errno));
+  c += ret;
 
   return c;
-}
-
-/* 
- * _unmarshall_int32
- *
- * unmarshall contents of a 32 bit integer
- *
- * Returns length of data read from buffer
- */
-static int
-_unmarshall_int32(int32_t *val, char *buffer)
-{
-  int32_t temp;
-  assert(val && buffer);
-  memcpy((void *)&temp, buffer, sizeof(temp));
-  *val = ntohl(temp);
-  return sizeof(temp);
-}
-
-/* 
- * _unmarshall_uint32
- *
- * unmarshall contents of an unsigned 32 bit integer
- *
- * Returns length of data read from buffer
- */
-static int
-_unmarshall_uint32(u_int32_t *val, char *buffer)
-{
-  u_int32_t temp;
-  assert(val && buffer);
-  memcpy((void *)&temp, buffer, sizeof(temp));
-  *val = ntohl(temp);
-  return sizeof(temp);
-}
-
-/* 
- * _unmarshall_buffer
- *
- * unmarshall contents of a buffer
- *
- * Returns length of data read from buffer
- */
-static int
-_unmarshall_buffer(char *buf, int buflen, char *buffer)
-{
-  assert(buf && buflen > 0 && buffer);
-  memcpy(buf, buffer, buflen);
-  return buflen;
 }
 
 int 
 cerebrod_heartbeat_unmarshall(struct cerebrod_heartbeat *hb, 
 			      char *buffer, int len)
 {
-  int c = 0;
+  int ret, c = 0;
 
   assert(hb && buffer && len > 0);
 
@@ -205,11 +126,29 @@ cerebrod_heartbeat_unmarshall(struct cerebrod_heartbeat *hb,
 		len);
       return -1;
     }
+  
+  if ((ret = cerebro_unmarshall_int32(&(hb->version), buffer + c, len - c)) < 0)
+      err_exit("cerebrod_heartbeat_unmarshall: cerebro_unmarshall_int32: %s",
+               strerror(errno));
+  c += ret;
 
-  c += _unmarshall_int32(&(hb->version), buffer + c);
-  c += _unmarshall_buffer(hb->hostname, sizeof(hb->hostname), buffer + c);
-  c += _unmarshall_uint32(&(hb->starttime), buffer + c);
-  c += _unmarshall_uint32(&(hb->boottime), buffer + c);
+  if ((ret = cerebro_unmarshall_buffer(hb->hostname, 
+                                       sizeof(hb->hostname), 
+                                       buffer + c, 
+                                       len - c)) < 0)
+    err_exit("cerebrod_heartbeat_unmarshall: cerebro_unmarshall_buffer: %s",
+             strerror(errno));
+  c += ret;
+
+  if ((ret = cerebro_unmarshall_uint32(&(hb->starttime), buffer + c, len - c)) < 0)
+    err_exit("cerebrod_heartbeat_unmarshall: cerebro_unmarshall_uint32: %s",
+             strerror(errno));
+  c += ret;
+
+  if ((ret = cerebro_unmarshall_uint32(&(hb->boottime), buffer + c, len - c)) < 0)
+    err_exit("cerebrod_heartbeat_unmarshall: cerebro_unmarshall_uint32: %s",
+             strerror(errno));
+  c += ret;
   
   return 0;
 }
