@@ -1,10 +1,11 @@
 /*****************************************************************************\
- *  $Id: cerebrod_heartbeat_protocol.h,v 1.1 2005-03-25 19:44:05 achu Exp $
+ *  $Id: cerebrod_heartbeat_protocol.h,v 1.2 2005-03-25 23:52:54 achu Exp $
 \*****************************************************************************/
 
 #ifndef _CEREBROD_HEARTBEAT_PROTOCOL_H
 #define _CEREBROD_HEARTBEAT_PROTOCOL_H
 
+#include <sys/types.h>
 #include "cerebro_defs.h"
 
 #define CEREBROD_HEARTBEAT_PROTOCOL_VERSION 1
